# veritas

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benchmarks/: 01_minimal.veri  02_arithmetic.veri  03_function_calls.veri  04_conditionals.veri  05_fibonacci.veri  06_loops.veri  06_sum.veri  07_refinements.veri  08_complex_refinements.veri  09_factorial.veri  10_nested_sum.veri  run_benchmarks.sh
benchmarks/results/: benchmark_20260106_004858.txt  benchmark_20260106_005003.txt  benchmark_20260106_005017.txt  benchmark_20260106_005221.txt  benchmark_20260106_005825.txt  benchmark_20260106_005839.txt  benchmark_20260203_004236.txt  benchmark_20260203_010042.txt  benchmark_20260203_010945.txt  benchmark_20260203_094754.txt  benchmark_20260203_094912.txt  benchmark_20260203_112447.txt  benchmark_20260203_121709.txt  benchmark_20260203_123006.txt  benchmark_20260203_123453.txt
eval/: README.md  bench.sh  create_run_dir.sh  error_classes.tsv  feature_tags.tsv  resolve_suite.sh  runtime_baselines.tsv  runtime_cases.tsv
eval/c_equivalents/: bubble_sort.c  bubble_sort_feature.c  for_loops.c  function_calls.c  recursive_fib.c  simple_arithmetic.c
eval/results/: binary_size.csv  compilation.csv  error_rejection.csv  loc.csv  runtime_correctness.csv  text_size.csv  timing.csv  verifier_matrix.csv
eval/suites/: README.md  algorithm_suite.txt  feature_suite.txt  (+2 more)
scripts/: run_unikernel.sh  validate_function_local_regions.sh
src/: lib.rs  main.rs  pipeline.rs
tests/: verify_examples.rs
veritas_docs/: dtal_spec.md
(+209 files in other folders)
