[package]
name = "veritas"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[[bin]]
name = "veritas"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
incremental = true

[dependencies]
ariadne = "0.5.1"
chumsky = "1.0.0-alpha.8"
im = "15.1.0"
z3 = "0.19.2"
